--- a/techio.yml
+++ b/techio.yml
@@ -2,6 +2,8 @@ title: Rust Project
 plan:
 - title: Welcome
   statement: markdowns/welcome.md
+-title: First Entry
+  statement: markdowns/first_entry.md
 projects:
   rust:
     buildCommand: cargo build
